--- a/style.css
+++ b/style.css
@@ -1,3 +1,176 @@
-html {
-    /* background: #000; */
+@font-face {
+    font-family: "Twister";
+    src: url("./fonts/TwisterJF.ttf");
+}
+
+:root {
+    --clr-primary-400: hsl(12, 88%, 59%);
+    --clr-primary-300: hsl(13, 100%, 96%);
+  
+    --clr-primary-400: hsl(228,39%,23%);
+  
+    --clr-neutral-100: hsl(233, 12%, 13%);
+    --clr-neutral-900: hsl(0, 0%, 0%);
+  
+    --ff-primary: 'Righteous', cursive;
+  
+    --ff-body: var(--ff-primary);
+    --ff-heading:'Twister', sans-serif;
+  
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 900;
+  }
+  
+  
+  /* https://piccalil.li/blog/a-modern-css-reset */
+  
+  /* Box sizing rules */
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  
+  /* Remove default margin */
+  * {
+    margin: 0;
+    padding: 0;
+    font: inherit;
+    /* border: 1px solid black; */
+  }
+  
+  /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+  ul[role='list'],
+  ol[role='list'] {
+    list-style: none;
+  }
+  
+  html, body {
+    height: 100%;
+  }
+  
+  /* Set core root defaults */
+  html:focus-within {
+    scroll-behavior: smooth;
+  }
+  
+  /* Set core body defaults */
+  body {
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+  }
+  
+  /* A elements that don't have a class get default styles */
+  a:not([class]) {
+    text-decoration-skip-ink: auto;
+  }
+  
+  /* Make images easier to work with */
+  img,
+  picture, svg {
+    max-width: 100%;
+    display: block;
+  }
+  
+  /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+  @media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+     scroll-behavior: auto;
+    }
+    
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
+
+
+/* ////////////////////////// */
+
+
+body {
+  position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    font-family: var(--ff-body);
+    padding: 2rem;
+    color: black;
+}
+
+.color-alt {
+  color: white;
+}
+
+h1 {
+    font-family: var(--ff-heading);
+    font-size: clamp(3rem, 2.3077rem + 3.0769vw, 5rem);
+}
+
+h2 {
+  font-size: clamp(2rem, 1.6538rem + 1.5385vw, 3rem);
+}
+
+p {
+  font-size: clamp(5rem, 4.6538rem + 1.5385vw, 6rem);
+  text-transform: uppercase;
+}
+
+  
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  img {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    width: 30%;
+    height: auto;
+    text-align: center;
+  }
+  
+
+  .hidden {
+    display: none;
+  }
+
+
+  /* Footer Styling */
+
+.github-icon {
+  width: 12px;
+  height: 12px;
+  transition: 0.3s ease;
+}
+
+.github-icon:hover {
+  transform: scale(1.2);
+}
+
+footer {
+  padding-top: 20px;
+  height: 5vh;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
+}
+
+svg {
+  display: inline-block;
 }
